fix inputs cut off in mobile view

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,27 +1,41 @@
 .container{
-    padding:2rem 3rem;
+    width: 100%;
     border-top: 1px solid rgb(0, 100, 52); 
-    font-family: 'Quicksand', sans-serif;    font-size: 1.2rem;
+    font-family: 'Quicksand', sans-serif;    font-size: 1rem;
     line-height: 1.8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+
+.container h1{
+    color:  rgb(0, 100, 52);    
+    font-size: 2.5rem;
+    font-family: 'GirlasFree', sans-serif;
+}
+
+.wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.container h1{
-    color:  rgb(0, 100, 52);    
-    font-size: 3rem;
-    font-family: 'GirlasFree', sans-serif;
-    text-align: center;
+@media only screen and (min-width: 900px)  {
+    .wrapper {
+        width: 100%;
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    border: 1px solid green;
+    padding: 2rem;
+    }
 }
 
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 1rem;
-}
+
 
 .field{
     padding: .5rem;
@@ -29,14 +43,28 @@
 
 .container input {
    padding: .5rem;
-   width: 25rem;
+   width: 15rem;
 }
 
 .container textarea{
-    resize: both;
-    height: 10rem;
-    width: 25rem;
+    width: 20rem;
+   height: 5rem;
 }
+
+
+@media only screen and (min-width: 900px)  {
+    .container input {
+        width: 25rem;
+    }
+
+    .container textarea{
+        resize: both;
+        height: 10rem;
+        width: 25rem;
+    }
+    
+}
+
 
 
 .container button{
